--- a/terminal-emulator/build.gradle
+++ b/terminal-emulator/build.gradle
@@ -73,7 +73,7 @@ afterEvaluate {
                 from components.findByName('release')
                 groupId = 'com.termux'
                 artifactId = 'terminal-emulator'
-                version = '0.0.0-beta.0'
+                version = '1.1.0'
                 artifact(sourceJar)
             }
         }
