--- a/terminal-view/build.gradle
+++ b/terminal-view/build.gradle
@@ -51,7 +51,7 @@ afterEvaluate {
                 from components.findByName('release')
                 groupId = 'com.termux'
                 artifactId = 'terminal-view'
-                version = '0.0.0-beta.0'
+                version = '1.1.0'
                 artifact(sourceJar)
             }
         }
