--- a/termux-shared/build.gradle
+++ b/termux-shared/build.gradle
@@ -89,7 +89,7 @@ afterEvaluate {
                 from components.findByName('release')
                 groupId = 'com.termux'
                 artifactId = 'termux-shared'
-                version = '0.0.0-beta.0'
+                version = '1.1.0'
                 artifact(sourceJar)
             }
         }
